bdr.BDR.scala.error
Compilation error:
BDR:4: error: reassignment to val
    if(litMessage = R){
                  ^BDR:6: error: not found: value avancer
      avancer()
      ^BDR:8: error: reassignment to val
    if(litMessage = L){
                  ^BDR:10: error: not found: value avancer
      avancer()
      ^BDR:12: error: reassignment to val
    if(litMessage = I){
                  ^BDR:15: error: not found: value avancer
      avancer()
      ^BDR:17: error: reassignment to val
    if(litMessage = A){
                  ^BDR:18: error: not found: value avancer
      avancer()
      ^BDR:20: error: reassignment to val
    if(litMessage = B){
                  ^BDR:21: error: not found: value avancer
      avancer()
      ^BDR:22: error: not found: value avancer
      avancer()
      ^BDR:24: error: reassignment to val
    if(litMessage = C){
                  ^BDR:25: error: not found: value avancer
      avancer()
      ^BDR:26: error: not found: value avancer
      avancer()
      ^BDR:27: error: not found: value avancer
      avancer()
      ^BDR:29: error: reassignment to val
    if(litMessage = Z){
                  ^BDR:30: error: not found: value reculer
      reculer()
      ^BDR:32: error: reassignment to val
    if(litMessage = Y){
                  ^BDR:33: error: not found: value reculer
      reculer()
      ^BDR:34: error: not found: value reculer
      reculer()
      ^BDR:36: error: reassignment to val
    if(litMessage = X){
                  ^BDR:37: error: not found: value reculer
      reculer()
      ^BDR:38: error: not found: value reculer
      reculer()
      ^BDR:39: error: not found: value reculer
      reculer()
      ^